# VFP

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  VFP validation against Nevot-Croce models.ipynb  VFP_v0_0_1.py  pyproject.toml
Examples/: Example 1 - Fitting with VFP.ipynb  Example 1b - Fitting with VFP with conformal.ipynb  Fitting with VFP.ipynb  Generate_data_for_Example1.ipynb  VFP validation.ipynb  VFP.py  VFP_GO.pkl  VFP_GO_conformal.pkl  VFP_NRXRR_GO.pkl  VFP_NRXRR_NR.py  VFP_NRXRR_XRR.py  zero_thickness_VFP_understanding.ipynb
Examples/.ipynb_checkpoints/: Fit NR+XRR with VFP-checkpoint.ipynb
docs/: Makefile  conf.py  example.ipynb  make.bat
src/vfp/: __init__.py  basevfp.py  calc.py  interface.py  plotting.py  vfp.py
tests/: test_vfp.py
