[tool.poetry]
name = "vfp"
version = "0.2.0"
description = "Calculate neutron and x-ray reflectivity profiles via generation of volume fraction profiles."
authors = ["Alexander Armstrong"]
license = "BSD 3-Clause"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9"
matplotlib = ">=3.7.1"
numpy = ">=1.23.5"
scipy = ">=1.10.1"
refnx = ">=0.1.42"
methodtools = ">=0.4.7"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-cov = "^5.0.0"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
